syntax = "proto3"; 
import "google/protobuf/empty.proto";
option csharp_namespace = "RemoteStream.Protocol"; 

service RemoteStreamRpcService {
    rpc GetStreamInfo(google.protobuf.Empty) returns (StreamInfo);
    rpc GetLength(google.protobuf.Empty) returns (LengthResponse);
    rpc SetLength(LengthRequest) returns (StatusResponse);
    rpc GetPosition(google.protobuf.Empty) returns (PositionResponse);
    rpc SetPosition(PositionRequest) returns (StatusResponse);
    rpc Seek(SeekRequest) returns (PositionResponse);
    rpc Write(WriteRequest) returns (StatusResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Flush(google.protobuf.Empty) returns (StatusResponse);
    rpc Close(google.protobuf.Empty) returns (StatusResponse);
}

message StreamInfo {
    bool can_read = 1;
    bool can_write = 2;
    bool can_seek = 3;
    bool can_timeout = 4;
}

message StatusResponse {
    oneof result{
        string error_json = 1;
        bool is_ok = 2;
    }
}

message SeekRequest {
    int64 offset = 1;
    int32 origin_value = 2;
}

message WriteRequest {
    bytes data = 1;
}

message ReadRequest {
    int32 bytes_to_Read = 1;
}

message LengthRequest {
    int64 value = 1;
}

message LengthResponse{
    oneof result{
        string error_json = 1;
        int64 value = 2;
    }
}

message PositionRequest {
     int64 value = 1;
}

message PositionResponse{
    oneof result{
        string error_json = 1;
        int64 value = 2;
    }
}

message ReadResponse {
    oneof result{
        string error_json = 1;
        bytes data = 2;
    }
}